# pico-inverted-pendulum

./: README.md  pico-ip.patch
Binaries/: Inclinometer.uf2  Inverted_Pendulum_Kalman.uf2
KalmanAngle/: CMakeLists.txt
KalmanFinal/: CMakeLists.txt
